--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             color: white;
         }
         h3{
-            
+
         }
 
     </style>
@@ -109,7 +109,7 @@
     </div>
 
     <button onclick="checkAnswers()">Check Answers</button>
-    <span id="resultField">Sample text</span>
+    <span id="resultField"><a href="page2.html">Clever Girl - Click me</a></span>
 
     <script src="script.js"></script>
 </body>
