--- a/page2.html
+++ b/page2.html
@@ -82,7 +82,7 @@
     <div class="main">
         <img id="corgiGif" src="giphy.webp" alt=""> 
         <div class="buttons">
-            <button class="yesButton" id="yes">Yes of Course</button>
+            <a href="yespage.html"><button class="yesButton" id="yes">Yes of Course</button></a>
             <button class="noButton" id="no" onclick="noAnswer()">No =(</button>   
         </div>
         
